добавлены UI-тесты + мелкие правки

--- a/ImageFeed.xcodeproj/xcshareddata/xcschemes/ImageFeed.xcscheme
+++ b/ImageFeed.xcodeproj/xcshareddata/xcschemes/ImageFeed.xcscheme
@@ -41,6 +41,17 @@
                ReferencedContainer = "container:ImageFeed.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "D08D2C672CE54511007AC842"
+               BuildableName = "ImageFeedUITests.xctest"
+               BlueprintName = "ImageFeedUITests"
+               ReferencedContainer = "container:ImageFeed.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
